correction pb overflow

--- a/fichiers_css/ask.css
+++ b/fichiers_css/ask.css
@@ -36,6 +36,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5px;
+    overflow: hidden;
 }
 .cadre_ask_want
 {
@@ -50,6 +51,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5px;
+    overflow: hidden;
 }
 .user_want
 {
